--- a/src/app/modulo/landing-page/components/heading/heading.component.html
+++ b/src/app/modulo/landing-page/components/heading/heading.component.html
@@ -22,7 +22,7 @@
        
     </div>
     <div class="arrow">
-        <a href=" ">
+        <a href="#title ">
         <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">expand_more</mat-icon>
         </a>
     </div>
