--- a/src/app/modulo/landing-page/components/cards/cards.component.html
+++ b/src/app/modulo/landing-page/components/cards/cards.component.html
@@ -1,26 +1,22 @@
 
-<div class=" nav  zh-mt-32">
+<div class="nav  zh-mt-32">
     <div class="speed-2">
         <p>Clientes Atendidos</p>
         <p>3.500</p>
 
     </div>
-    <div class="speed zh-mb-20">
-        <div class=" zh-d-flex">
-            <p class="number zh-d-flex">Índice de assertividade<span></span> <span>95%</span></p>
-            <p class="progress-bar"></p>
-        </div>
-    </div>
+
 </div>
 <div class="card-wall">
-    <div class="bar zh-pt-20">
+    <div class="bar">
         <h2 class="color-white ">Cuidar pode ser Leve</h2>
     </div>
 
     <div class="btn">
         <button mat-raised-button color="primary" class="btn">fale com um consultor</button>
     </div>
-    <h2 class=" bord color-white ">CONHEÇA O NOSSO CONCEITO DE ECOSSISTEMA DE CUIDADOS</h2>
+    <div class="bord"></div>
+    <h2 class="color-white ">CONHEÇA O NOSSO CONCEITO DE ECOSSISTEMA DE CUIDADOS</h2>
     <div class="larger-text">
         <h3 id="text-h3" class="text  color-SecondaryDark  zh-fw-heavy-100">UM VERDADEIRO CONCIERGE ONDE A FAMÍLIA
             ENCONTRA TODOS OS SERVIÇOS QUE NECESSITA EM UM SÓ LUGAR</h3>
@@ -32,60 +28,62 @@
             Vídeo Monitoramento
             Entre outros</p>
     </div>
+    <div class="bord"></div>
     <div class="small-text">
-        <p class="color-white zh-mt-20">COMO FUNCIONA?</p>
+        <p class="color-white zh-mt-20 ">COMO FUNCIONA?</p>
         <p class=" color-SecondaryDark ">CONFIRA O PASSO A PASSO:</p>
     </div>
-
-    <div class="larger">
-        <div class="card blue">
-            <h3>Passo 1</h3>
-            <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">search</mat-icon>
-            <p>Cadastro e análise inicial detalhada (por telefone, online ou presencial*)</p>
-        </div>
-        <div class="card white">
-            <h3>Passo 1</h3>
-            <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">visibility</mat-icon>
-            <p>Identificação das principais necessidades do Idoso e perfil do profissional/prestadores</p>
-        </div>
-        <div class="card blue">
-            <h3>Passo 1</h3>
-            <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">fact_check</mat-icon>
-            <p>Envio
-                e aprovação
-                da proposta</p>
-        </div>
-        <div class="card white">
-            <h3>Passo 1</h3>
-            <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">medication</mat-icon>
-            <p>Consultor (a) exclusivo para acompanhamento do processo</p>
-        </div>
-        <div class="card blue">
-            <h3>Passo 1</h3>
-            <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">done</mat-icon>
-            <p>Seleção de profissionais
-                compatíveis com
-                suas exigências</p>
-        </div>
-        <div class="card white">
-            <h3>Passo 1</h3>
-            <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">download</mat-icon>
-            <p>Envio
-                e armazenamento
-                de documentos</p>
-        </div>
-        <div class="card blue">
-            <h3>Passo 1</h3>
-            <mat-icon class="backgroundBlue zh-mt-20 zh-mb-20">play_arrow</mat-icon>
-            <p>Início
-                da prestação
-                de Serviço</p>
-        </div>
-        <div class="card white">
-            <h3>Passo 1</h3>
-            <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">handshake</mat-icon>
-            <p>Acompanhamento e
-                suporte</p>
+    <div class="container-card">
+        <div class="larger">
+            <div class="card blue">
+                <h3>Passo 1</h3>
+                <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">search</mat-icon>
+                <p>Cadastro e análise inicial detalhada (por telefone, online ou presencial*)</p>
+            </div>
+            <div class="card white">
+                <h3>Passo 2</h3>
+                <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">visibility</mat-icon>
+                <p>Identificação das principais necessidades do Idoso e perfil do profissional/prestadores</p>
+            </div>
+            <div class="card blue">
+                <h3>Passo 3</h3>
+                <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">fact_check</mat-icon>
+                <p>Envio
+                    e aprovação
+                    da proposta</p>
+            </div>
+            <div class="card white">
+                <h3>Passo 4</h3>
+                <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">medication</mat-icon>
+                <p>Consultor (a) exclusivo para acompanhamento do processo</p>
+            </div>
+            <div class="card blue">
+                <h3>Passo 5</h3>
+                <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">done</mat-icon>
+                <p>Seleção de profissionais
+                    compatíveis com
+                    suas exigências</p>
+            </div>
+            <div class="card white">
+                <h3>Passo 6</h3>
+                <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">download</mat-icon>
+                <p>Envio
+                    e armazenamento
+                    de documentos</p>
+            </div>
+            <div class="card blue">
+                <h3>Passo 7</h3>
+                <mat-icon class="backgroundBlue zh-mt-20 zh-mb-20">play_arrow</mat-icon>
+                <p>Início
+                    da prestação
+                    de Serviço</p>
+            </div>
+            <div class="card white">
+                <h3>Passo 8</h3>
+                <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">handshake</mat-icon>
+                <p>Acompanhamento e
+                    suporte</p>
+            </div>
         </div>
     </div>
     <div class="color-white">
