--- a/src/app/modulo/landing-page/components/cards/cards.component.scss
+++ b/src/app/modulo/landing-page/components/cards/cards.component.scss
@@ -2,18 +2,20 @@
     width: 100%;
     background-image: url(../../../../../assets/imagens/pexels-kampus-production-7551675.png);
     text-align: center;
-    padding-top: 32px;
+    padding: 32px 20px 0 20px;
 }
 
 .bar {
-    font-size: 35px;
-    width: 1200px;
+    max-width: 1060px;
     margin: 0 auto;
-    height: 120px;
     background-image: linear-gradient(90deg, #3896bc 29%, #c2efff 100%);
-    color: #fff;
     border-radius: 20px;
-    padding: 20px;
+
+    h2 {
+        color: #fff;
+        font-size: 35px;
+        padding: 24px 0;
+    }
 
 }
 
@@ -21,14 +23,14 @@
     border-top: 2px solid #fff;
     padding-top: 20px;
     font-size: 35px;
-    width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
 
 }
 
 .larger-text {
     text-align: center;
-    width: 700px;
+    max-width: 700px;
     margin: 0 auto;
     line-height: 25px;
     color: #fff;
@@ -43,32 +45,31 @@
 
 .text h3 {
     font-size: 20px;
-
 }
 
 .small-text {
-    width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
     text-align: center;
     font-size: 32px;
-    border-top: 2px solid #fff;
+}
+
+.container-card {
+    max-width: 1400px;
+    margin: 0 auto;
 
 }
 
-
 .larger {
-    width: 100vh;
-    display: flex;
-    justify-content: center;
-    display: inline-grid;
-    grid-template-columns: repeat(4, 210px);
-    gap: 50px;
-    row-gap: 10px;
+
+
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
 
 .card {
-    width: 250px;
-    padding: 10px;
+
+    padding: 20px;
     background-color: #000;
     margin: 20px;
     border-radius: 20px;
@@ -103,54 +104,24 @@ h3 {
 }
 
 
-
-
-
-
 .nav {
-    width: 100%;
+    max-width: 1060px;
     display: flex;
     align-items: center;
     flex-direction: column;
-
-
-    .number {
-        width: 950px;
-        padding: 15px;
-        border-radius: 30px;
-        background-color: #FF9400;
-        display: flex;
-        justify-content: space-between;
-        color: #fff;
-        z-index: 99999;
-    }
-
-    .progress-bar {
-        background-color: rgb(255, 255, 255);
-        border-radius: 30px;
-        height: 48px;
-        box-shadow: 1px 1px 1px 1px rgb(197, 180, 207);
-        color: #000;
-        padding: 0px 50px;
-        margin-left: -42px;
-
-    }
+    padding: 0 24px;
+    margin: 0 auto;
+    margin-bottom: 32px;
 
     .speed-2 {
-        width: 1000px;
+        width: 100%;
         background-color: #FF9400;
         padding: 15px;
         border-radius: 30px;
         display: flex;
         justify-content: space-between;
         color: #fff;
-    }
 
-    .speed {
-        background-color: #fff;
-        width: 1000px;
-        border-radius: 30px;
-        margin-top: 10px;
     }
 }
 
@@ -165,48 +136,4 @@ button {
 button:hover {
     color: #ffffff !important;
     background-color: #FF9400;
-}
-
-@media(max-width: 1039px) {
-    .card-wall {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-    }
-
-    .bord {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-    }
-    .larger-text{
-        width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-    }
-
-    .small-text {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-    }
-
-
-
-    .larger {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-
-
-    }
 }
