--- a/src/app/modulo/landing-page/views/landing-page.component.html
+++ b/src/app/modulo/landing-page/views/landing-page.component.html
@@ -57,11 +57,10 @@
     <app-painel-expansion></app-painel-expansion>
 
     <h2 class="color-Segundary zh-mb-32 zh-mt-24"> <span class="color-PrimaryDark">ONDE</span> ESTAMOS:</h2>
-    <iframe
+    <iframe class="mapa"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29284.4447981606!2d-46.59157332089842!3d-23.4404153!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cef5e57cc587fd%3A0x60872e25ecb7290f!2sMy%20Business%20on%20Google%20Maps!5e0!3m2!1spt-BR!2sbr!4v1668538143352!5m2!1spt-BR!2sbr"
-        width="1100" height="400" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+        style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    
     <div class="bord   zh-d-flex zh-justify-cont-center zh-mb-20 zh-mt-60 zh-pt-20">
         <i class="fa-solid fa-users icon color-Segundary"></i>
     </div>
@@ -69,7 +68,9 @@
 
 
 <h2 class="">PARCEIROS:</h2>
+<div class="container-carousel">
 <app-carousel [images]="images" [autoSlide]="true" class=""></app-carousel>
+</div>
 <div>
     <app-rodape></app-rodape>
 </div>
