--- a/src/app/shared/componentes/carousel/carousel.component.scss
+++ b/src/app/shared/componentes/carousel/carousel.component.scss
@@ -2,10 +2,10 @@
     position: relative;
     margin: auto;
     text-align: center;
-    width: 900px;
+    max-width: 900px;
     height: 200px;
     border-radius: 15px;
-   /*  box-shadow: 0 6px 12px #dce1e1; */
+    /*  box-shadow: 0 6px 12px #dce1e1; */
     display: flex;
     justify-content: center;
 }
@@ -13,14 +13,13 @@
 .carousel-container img {
     display: none;
     border-radius: 15px;
+    width: 100%;
 }
-
 
 .carousel-container img.image-active {
     display: block;
     height: 200px;
 }
-
 //dots indicators
 
 .carousel-dot-container {
