--- a/src/app/shared/componentes/painel-expansion/painel-expansion.component.scss
+++ b/src/app/shared/componentes/painel-expansion/painel-expansion.component.scss
@@ -1,22 +1,35 @@
-.painel{
-    min-width: 1000px;
+.painel {
+
     border-left: 6px solid #3896bc;
     padding: 14px 0px;
-    color: #3896bc;;
+    color: #3896bc;
+    ;
 }
 
 
 
 .mat-expansion-panel {
+
     .mat-expansion-panel-header {
         font-size: 20px;
 
         .mat-content {
+
             display: flex;
             justify-content: space-around;
             margin-left: 50px !important;
             margin-right: 50px !important;
         }
+    }
+}
+
+.mat-expansion-panel-header:not([aria-disabled=true]) {
+    max-width: 1111px;
+}
+
+.tilefix {
+    p {
+        width: 100%;
     }
 }
 
