--- a/src/app/modulo/landing-page/components/rodape/rodape.component.scss
+++ b/src/app/modulo/landing-page/components/rodape/rodape.component.scss
@@ -3,6 +3,7 @@ footer{
     padding: 20px;
     ul{
         border-bottom: 1px solid #fff;
+        list-style: none;
         li{
             width: 30%;
     
@@ -10,6 +11,7 @@ footer{
                 color: #fff;
                 text-decoration: none;
                 font-weight: 500;
+               
             }
         }
     }
