--- a/src/app/modulo/landing-page/views/landing-page.component.scss
+++ b/src/app/modulo/landing-page/views/landing-page.component.scss
@@ -84,7 +84,7 @@ button:hover {
 
     .back {
         background-image: linear-gradient(90deg, #3896bc 29%, #24a8d8 100%);
-        backface-visibility: hidden;
+      
         border-radius: 23px;
         color: #fff;
     }
@@ -92,6 +92,7 @@ button:hover {
 
 .flip-box:hover {
     transform: rotateY(180deg);
+    backface-visibility: hidden;
 }
 
 
@@ -138,4 +139,26 @@ button:hover {
 .mapa {
     width: 100%;
     height: 400px;
+}
+@media(max-width:900px){
+    .wrap{
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        
+            .warp-list{
+                width: 80%;
+            }
+
+            .warp-img{
+                margin-left: 29px;
+            }
+    }
+    .flip-box{
+        width: 100%;
+    display: none;    }
+        .mapa{
+            width: 80%;
+        }
+                
 }
